--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,10 @@
 </head>
 <body>
     <h1>チャット</h1>
-    <ul id="chats"></dl>
-      <form id="nameform">
-        <input id="name" autocomplete="off" placeholder="表示名" /><button>参加</button>
-      </form>
+    <ul id="chats"></ul>
     <form id="form">
       <input id="msg" autocomplete="off" /><button>送信</button>
     </form>
-  <script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
